--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,7 +1,1 @@
-set(target "samp_mat")
-
-file(GLOB hdrs "*.h*")
-file(GLOB srcs "*.cpp")
-
-add_executable(${target} ${srcs} ${hdrs})
-target_link_libraries(${target} gtest ${MP2_INCLUDE})
+create_executable_test_project(samp)
