--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,1 @@
-set(target ${MP2_TESTS})
-
-file(GLOB hdrs "*.h*")
-file(GLOB srcs "*.cpp")
-
-add_executable(${target} ${srcs} ${hdrs})
-target_link_libraries(${target} gtest ${MP2_INCLUDE})
+create_executable_test_project(my_tests)
